--- a/package.json
+++ b/package.json
@@ -16,10 +16,18 @@
     "url": "https://github.com/DRMALL/drm_api/issues"
   },
   "dependencies": {
+    "jsonwebtoken": "^7.4.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-logger": "^3.0.1",
     "koa-router": "^7.2.1",
-    "koa-static": "^3.0.0"
+    "koa-static": "^3.0.0",
+    "mongoose": "^4.10.8"
   },
-  "homepage": "https://github.com/DRMALL/drm_api#readme"
+  "homepage": "https://github.com/DRMALL/drm_api#readme",
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1"
+  }
 }
