--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-logger": "^3.0.1",
     "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
+    "koa2-cors": "^2.0.3",
     "mongoose": "^4.10.8"
   },
   "homepage": "https://github.com/DRMALL/drm_api#readme",
