--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/DRMALL/drm_api/issues"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "busboy": "^0.2.14",
     "jsonwebtoken": "^7.4.1",
     "koa": "^2.3.0",
