--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "supertest": "^3.0.0"
   }
 }
