--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DRM'S API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test mocha /test"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,8 @@
     "babel-core": "^6.25.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2",
     "supertest": "^3.0.0"
   }
 }
