--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
     "koa2-cors": "^2.0.3",
-    "mongoose": "^4.10.8"
+    "mongoose": "^4.10.8",
+    "socket.io": "^2.0.3"
   },
   "homepage": "https://github.com/DRMALL/drm_api#readme",
   "devDependencies": {
