--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jsonwebtoken": "^7.4.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
-    "koa-logger": "^3.0.1",
+    "koa-log4": "^2.2.1",
     "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
     "koa2-cors": "^2.0.3",
