--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
     "url": "https://github.com/DRMALL/drm_api/issues"
   },
   "dependencies": {
+    "append-field": "^1.0.0",
     "bcrypt": "^1.0.2",
     "busboy": "^0.2.14",
     "excel-export": "^0.5.1",
     "jsonwebtoken": "^7.4.1",
     "koa": "^2.3.0",
+    "koa-body": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-log4": "^2.2.1",
     "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
     "koa2-cors": "^2.0.3",
     "mongoose": "^4.10.8",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "winston": "^2.3.1",
+    "winston-daily-rotate-file": "^1.4.6"
   },
   "homepage": "https://github.com/DRMALL/drm_api#readme",
   "devDependencies": {
