--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "koa-static": "^3.0.0",
     "koa2-cors": "^2.0.3",
     "mongoose": "^4.10.8",
+    "node-xlsx": "^0.11.0",
     "socket.io": "^2.0.3",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
