--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/DRMALL/drm_api/issues"
   },
   "dependencies": {
+    "all": "^0.0.0",
     "append-field": "^1.0.0",
     "bcrypt": "^1.0.2",
     "busboy": "^0.2.14",
@@ -30,6 +31,8 @@
     "koa2-cors": "^2.0.3",
     "mongoose": "^4.10.8",
     "node-xlsx": "^0.11.0",
+    "nodemailer": "^4.1.0",
+    "redis": "^2.8.0",
     "socket.io": "^2.0.3",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
