--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemailer": "^4.1.0",
     "redis": "^2.8.0",
     "socket.io": "^2.0.3",
+    "tablestore": "^4.0.6",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
   },
