--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
     "koa2-cors": "^2.0.3",
+    "moment": "^2.19.1",
     "mongoose": "^4.10.8",
     "multer": "^1.3.0",
     "node-xlsx": "^0.11.0",
